--- a/docs/docs/cmd/spo/user/user-ensure.mdx
+++ b/docs/docs/cmd/spo/user/user-ensure.mdx
@@ -18,27 +18,54 @@ m365 spo user ensure [options]
 `-u, --webUrl <webUrl>`
 : Absolute URL of the site.
 
-`--entraId [--entraId]`
-: Id of the user in Entra. Specify either `entraId` or `userName`.
+`--entraId [entraId]`
+: Id of the user in Entra ID. Specify either `entraId`, `userName`, `loginName`, `entraGroupId` or `entraGroupName`.
 
 `--userName [userName]`
-: User's UPN (user principal name, e.g. john@contoso.com). Specify either `entraId` or `userName`.
+: User's UPN (user principal name, e.g. john@contoso.com). Specify either `entraId`, `userName`, `loginName`, `entraGroupId` or `entraGroupName`.
+
+`--loginName [loginName]`
+: The login name of the principal. Specify either `entraId`, `userName`, `loginName`, `entraGroupId` or `entraGroupName`.
+
+`--entraGroupId [entraGroupId]`
+: ID of the Microsoft Entra group. Specify either `entraId`, `userName`, `loginName`, `entraGroupId` or `entraGroupName`.
+
+`--entraGroupName [entraGroupName]`
+: Display name of the Microsoft Entra group. Specify either `entraId`, `userName`, `loginName`, `entraGroupId` or `entraGroupName`.
 ```
 
 <Global />
 
 ## Examples
 
-Ensures a user by its Entra Id.
+Ensure a user by its Entra Id.
 
 ```sh
 m365 spo user ensure --webUrl https://contoso.sharepoint.com/sites/project --entraId e254750a-eaa4-44f6-9517-b74f65cdb747
 ```
 
-Ensures a user by its user principal name.
+Ensure a user by its user principal name.
 
 ```sh
 m365 spo user ensure --webUrl https://contoso.sharepoint.com/sites/project --userName john@contoso.com
+```
+
+Ensure a user by its login name.
+
+```sh
+m365 spo user ensure --webUrl https://contoso.sharepoint.com/sites/Marketing --loginName "i:0#.f|membership|john.doe@contoso.com"
+```
+
+Ensure a Microsoft Entra group by ID.
+
+```sh
+m365 spo user ensure --webUrl https://contoso.sharepoint.com/sites/Marketing --entraGroupId e08e899f-ba40-4e91-ab36-44d4fbaa454e
+```
+
+Ensure a Microsoft Entra group by display name.
+
+```sh
+m365 spo user ensure --webUrl https://contoso.sharepoint.com/sites/Marketing --entraGroupName "Marketing team"
 ```
 
 ## Response
@@ -119,4 +146,3 @@ m365 spo user ensure --webUrl https://contoso.sharepoint.com/sites/project --use
 
   </TabItem>
 </Tabs>
-
