--- a/docs/docs/cmd/spo/user/user-ensure.mdx
+++ b/docs/docs/cmd/spo/user/user-ensure.mdx
@@ -19,13 +19,22 @@ m365 spo user ensure [options]
 : Absolute URL of the site.
 
 `--entraId [--entraId]`
-: Id of the user in Entra. Specify either `aadId`, `entraId`, or `userName`.
+: Id of the user in Entra. Specify either `aadId`, `entraId`, `userName`, `loginName`, `entraGroupId` or `entraGroupName`.
 
 `--aadId [--aadId]`
-: (deprecated. Use `entraId` instead) Id of the user in Microsoft Entra. Specify either `aadId`, `entraId`, or `userName`.
+: (deprecated. Use `entraId` instead) Id of the user in Microsoft Entra. Specify either `aadId`, `entraId`, `userName`, `loginName`, `entraGroupId` or `entraGroupName`.
 
 `--userName [userName]`
-: User's UPN (user principal name, e.g. john@contoso.com). Specify either `aadId`, `entraId`, or `userName`.
+: User's UPN (user principal name, e.g. john@contoso.com). Specify either `aadId`, `entraId`, `userName`, `loginName`, `entraGroupId` or `entraGroupName`.
+
+`--loginName [loginName]`
+: The login name of the principal. Specify either `aadId`, `entraId`, `userName`, `loginName`, `entraGroupId` or `entraGroupName`.
+
+`--entraGroupId [entraGroupId]`
+: ID of the Microsoft Entra group. Specify either `aadId`, `entraId`, `userName`, `loginName`, `entraGroupId` or `entraGroupName`.
+
+`--entraGroupName [entraGroupName]`
+: Display name of the Microsoft Entra group. Specify either `aadId`, `entraId`, `userName`, `loginName`, `entraGroupId` or `entraGroupName`.
 ```
 
 <Global />
@@ -42,6 +51,28 @@ Ensures a user by its user principal name.
 
 ```sh
 m365 spo user ensure --webUrl https://contoso.sharepoint.com/sites/project --userName john@contoso.com
+```
+
+Ensures a user by its login name.
+
+```sh
+m365 spo user ensure --webUrl https://contoso.sharepoint.com/sites/Marketing --loginName "c:0t.c|tenant|e08e899f-ba40-4e91-ab36-44d4fbaa454e"
+```
+
+```sh
+m365 spo user ensure --webUrl https://contoso.sharepoint.com/sites/Marketing --loginName "i:0#.f|membership|john.doe@contoso.com"
+```
+
+Ensures a user by ID of the Microsoft Entra group.
+
+```sh
+m365 spo user ensure --webUrl https://contoso.sharepoint.com/sites/Marketing --entraGroupId e08e899f-ba40-4e91-ab36-44d4fbaa454e
+```
+
+Ensures a user by display name of the Microsoft Entra group.
+
+```sh
+m365 spo user ensure --webUrl https://contoso.sharepoint.com/sites/Marketing --entraGroupName "Marketing team"
 ```
 
 ## Response
@@ -122,4 +153,3 @@ m365 spo user ensure --webUrl https://contoso.sharepoint.com/sites/project --use
 
   </TabItem>
 </Tabs>
-
