Updates release notes and upgrade guidance

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -10,6 +10,10 @@ sidebar_position: 3
 
 - extended `m365 login` with `--ensure` [#5217](https://github.com/pnp/cli-microsoft365/issues/5217)
 - updated docs thumbnail [#6302](https://github.com/pnp/cli-microsoft365/issues/6302)
+- fixed casing and autocomplete for enums based on zod
+- updated docs contribution guide with Zod [#6322](https://github.com/pnp/cli-microsoft365/issues/6322)
+- removed obsolete example [#6272](https://github.com/pnp/cli-microsoft365/issues/6272)
+- fixed 'm365 setup' app registration to use 'CLI for M365' [#6367](https://github.com/pnp/cli-microsoft365/issues/6367)
 
 ### ⚠️ Breaking changes
 
@@ -40,7 +44,8 @@ sidebar_position: 3
 - updated [cli doctor](../cmd/cli/cli-doctor.mdx) command output [#5923](https://github.com/pnp/cli-microsoft365/issues/5923)
 - removed duplicate properties from [teams tab list](../cmd/teams/tab/tab-list.mdx) command [#5900](https://github.com/pnp/cli-microsoft365/issues/5900)
 - renamed `entra group user <verb>` to `entra group member <verb>`. [#6396](https://github.com/pnp/cli-microsoft365/issues/6396)
-- Updates setting users in `entra m365group set` [#6061](https://github.com/pnp/cli-microsoft365/issues/6061)
+- updated setting users in `entra m365group set` [#6061](https://github.com/pnp/cli-microsoft365/issues/6061)
+- removed aad options and aliasses [#5823](https://github.com/pnp/cli-microsoft365/issues/5823), [#5676](https://github.com/pnp/cli-microsoft365/issues/5676)
 
 ## [v9.1.0](https://github.com/pnp/cli-microsoft365/releases/tag/v9.1.0)
 
