--- a/docs/docs/v10-upgrade-guidance.mdx
+++ b/docs/docs/v10-upgrade-guidance.mdx
@@ -141,6 +141,14 @@ We have renamed the `entra group user` commands to `entra group member` to bette
 
 Please update your scripts to use the new command names.
 
+### Removed `aad` options and aliasses to `aad` commands.
+
+As part of the renaming of Azure AD to Microsoft Entra ID, we have removed the `aad` options and aliases. From now on only `entra` commands are available.
+
+#### What action do I need to take?
+
+Please, check if your scripts use any of the `aad` commands and if so update it to `entra` commands.
+
 ## SharePoint
 
 ### Updated `spo site appcatalog remove` options
