--- a/docs/docs/cmd/spo/file/file-roleassignment-remove.mdx
+++ b/docs/docs/cmd/spo/file/file-roleassignment-remove.mdx
@@ -23,13 +23,19 @@ m365 spo file roleassignment remove [options]
 : The UniqueId (GUID) of the file. Specify either `fileUrl` or `fileId` but not both.
 
 `--principalId [principalId]`
-: The SharePoint Id of the principal. It may be either a user id or group id. Specify either `upn`, `groupName`, or `principalId` but not multiple.
+: The SharePoint Id of the principal. It may be either a user id or group id. Specify either `upn`, `groupName`, entraGroupId, entraGroupName, or `principalId` but not multiple.
 
 `--upn [upn]`
-: The upn/email of the user. Specify either `upn`, `groupName`, or `principalId` but not multiple.
+: The upn/email of the user. Specify either `upn`, `groupName`, entraGroupId, entraGroupName, or `principalId` but not multiple.
 
 `--groupName [groupName]`
-: The group name of the SharePoint group Specify either `upn`, `groupName`, or `principalId` but not multiple.
+: The group name of the SharePoint group Specify either `upn`, `groupName`, entraGroupId, entraGroupName, or `principalId` but not multiple. This option is only used for SharePoint Online groups.
+
+`--entraGroupId [entraGroupId]`
+: ID of the Microsoft Entra group to add. Specify either `upn`, `groupName`, entraGroupId, entraGroupName, or `principalId` but not multiple.
+
+`--entraGroupName [entraGroupName]`
+: Display name of the Microsoft Entra group to add. Specify either `upn`, `groupName`, entraGroupId, entraGroupName, or `principalId` but not multiple.
 
 `-f, --force`
 : Don't prompt for confirmation.
@@ -55,6 +61,17 @@ Remove a role assignment by group name from a file by id.
 
 ```sh
 m365 spo file roleassignment remove --webUrl "https://contoso.sharepoint.com/sites/contoso-sales" --fileId "b2307a39-e878-458b-bc90-03bc578531d6" --groupName "saleGroup"
+```
+
+Remove a role assignment by entra group id from a file by id without prompt
+
+```sh
+m365 spo file roleassignment remove --webUrl "https://contoso.sharepoint.com/sites/contoso-sales" --fileId "b2307a39-e878-458b-bc90-03bc578531d6" --entraGroupId 3c97e01e-978d-417b-a196-b6a3e37fa873 --force
+
+Remove a role assignment by entra group name from a file by id.
+
+```sh
+m365 spo file roleassignment remove --webUrl "https://contoso.sharepoint.com/sites/contoso-sales" --fileId "b2307a39-e878-458b-bc90-03bc578531d6" --entraGroupName "Marketing Members"
 ```
 
 ## Response
