Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -14,6 +14,7 @@ sidebar_position: 3
 - updated docs contribution guide with Zod [#6322](https://github.com/pnp/cli-microsoft365/issues/6322)
 - removed obsolete example [#6272](https://github.com/pnp/cli-microsoft365/issues/6272)
 - fixed 'm365 setup' app registration to use 'CLI for M365' [#6367](https://github.com/pnp/cli-microsoft365/issues/6367)
+- fixed example in 'spo site sharingpermission set'
 
 ### ⚠️ Breaking changes
 
@@ -46,6 +47,8 @@ sidebar_position: 3
 - renamed `entra group user <verb>` to `entra group member <verb>`. [#6396](https://github.com/pnp/cli-microsoft365/issues/6396)
 - updated setting users in `entra m365group set` [#6061](https://github.com/pnp/cli-microsoft365/issues/6061)
 - removed aad options and aliasses [#5823](https://github.com/pnp/cli-microsoft365/issues/5823), [#5676](https://github.com/pnp/cli-microsoft365/issues/5676)
+- removed deprecated option `username` from `entra m365group user set` command [#6224](https://github.com/pnp/cli-microsoft365/issues/6224)
+- updated endpoint for `spo folder move` command [#6154](https://github.com/pnp/cli-microsoft365/issues/6154)
 
 ## [v9.1.0](https://github.com/pnp/cli-microsoft365/releases/tag/v9.1.0)
 
