Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -15,6 +15,7 @@ sidebar_position: 3
 - removed obsolete example [#6272](https://github.com/pnp/cli-microsoft365/issues/6272)
 - fixed 'm365 setup' app registration to use 'CLI for M365' [#6367](https://github.com/pnp/cli-microsoft365/issues/6367)
 - fixed example in 'spo site sharingpermission set'
+- updated 'entra m365group user remove' command [#6058](https://github.com/pnp/cli-microsoft365/issues/6058)
 
 ### ⚠️ Breaking changes
 
