--- a/docs/docs/v10-upgrade-guidance.mdx
+++ b/docs/docs/v10-upgrade-guidance.mdx
@@ -2,16 +2,6 @@
 
 The v10 of CLI for Microsoft 365 introduces several breaking changes. To help you upgrade to the latest version of CLI for Microsoft 365, we've listed those changes along with any actions you may need to take.
 
-## App
-
-### Updated option names of 'app permission add' to plural
-
-We updated the [app permission add](./cmd/app/permission/permission-add.mdx) command. Option were updated to `applicationPermissions` and `delegatedPermissions`.
-
-#### What action do I need to take?
-
-Please, check the documentation of the [app permission add](./cmd/app/permission/permission-add.mdx) command to see the updated options and adjust your scripts accordingly.
-
 ## CLI
 
 ### Removed command `cli reconsent`
@@ -70,49 +60,9 @@ The deprecated Guest value was removed from the `role` option in the [aad m365gr
 
 Please, check the documentation of the [aad m365group user list](./cmd/entra/m365group/m365group-user-list.mdx) command to see the updated ``role` option and adjust your scripts accordingly.
 
-#### Aligned options with naming convention
-
-We updated option naming from `groupDisplayName` to `groupName` and `userPrincipalName` to `userName`.
-
-**Affected commands:**
-
-- [entra group member list](./cmd/entra/group/group-member-list.mdx)
-- [entra m365group conversation post list](./cmd/entra/m365group/m365group-conversation-post-list.mdx)
-- [entra m365group recyclebinitem list](./cmd/entra/m365group/m365group-recyclebinitem-list.mdx)
-- [outlook message get](./cmd/outlook/message/message-get.mdx)  
-
 #### What action do I need to take?
 
 Please, check the documentation of the affected commands to see the updated option naming and adjust your scripts accordingly.
-
-### Aligns options of `entra enterpriseapp` commands
-
-For this new major version, we've aligned the options of the `entra enterpriseapp` commands as follows: 
-
-[entra enterpriseapp add](https://pnp.github.io/cli-microsoft365/cmd/entra/enterpriseapp/enterpriseapp-add)
-
-| Old option | New option |
-|---------------|---------------|
-| --appId [appId] | -i, --id [id] |
-| --appName [appName] | -n, --displayName [displayName] |
-
-[entra enterpriseapp get](https://pnp.github.io/cli-microsoft365/cmd/entra/enterpriseapp/enterpriseapp-get)
-
-| Old option | New option |
-|---------------|---------------|
-| -i, --appId [appId] | -i, --id [id] |
-| -n, --appDisplayName [appDisplayName] | -n, --displayName [displayName] |
-| --appObjectId [appObjectId] | --objectId [objectId] |
-
-[entra enterpriseapp list](https://pnp.github.io/cli-microsoft365/cmd/entra/enterpriseapp/enterpriseapp-list)
-
-| Old option | New option |
-|---------------|---------------|
-| --displayName [displayName] | -n, --displayName [displayName] |
-
-#### What action do I need to take?
-
-Please, check the documentation of the [entra enterpriseapp add](./cmd/entra/enterpriseapp/enterpriseapp-add), [entra enterpriseapp get](./cmd/entra/enterpriseapp/enterpriseapp-get), and [entra enterpriseapp list](./cmd/entra/enterpriseapp/enterpriseapp-list) commands to see the updated options and adjust your scripts accordingly.
 
 ### Removed deprecated option `userName` from the `entra m365group user add` command.
 
@@ -364,6 +314,27 @@ Alias | Command
 Replace any of the aliases mentioned above with the corresponding command name. The functionality of the command hasn't changed.
 
 ## General
+
+### Aligned options with naming convention
+
+In version 10 of the CLI for Microsoft 365, we have made updates to the options for specific commands, aligning with our naming convention. This includes renaming options to ensure consistency and improve the CLI experience. Some other options have been renamed to align with the response output of the commands. These changes aim to make it easier for you to use the CLI.
+
+We've updated the following commands and options:
+
+Command|Old option|New option
+-------|----------|----------
+[app permission add](./cmd/app/permission/permission-add.mdx) | `applicationPermission` <br /> `delegatedPermission` | `applicationPermissions` <br /> `delegatedPermissions`
+[entra enterpriseapp add](./cmd/entra/enterpriseapp/enterpriseapp-add) | `appId` <br /> `appName` | `id` <br /> `displayName`
+[entra enterpriseapp get](./cmd/entra/enterpriseapp/enterpriseapp-get) | `appId` <br /> `appDisplayName` <br /> `appObjectId` | `id` <br /> `displayName` <br /> `objectId`
+[entra group member list](./cmd/entra/group/group-member-list.mdx) | `groupDisplayName` | `groupName`
+[entra m365group conversation post list](./cmd/entra/m365group/m365group-conversation-post-list.mdx) | `groupDisplayName` | `groupName`
+[entra m365group recyclebinitem list](./cmd/entra/m365group/m365group-recyclebinitem-list.mdx) | `groupDisplayName` | `groupName`
+[entra m365group user remove](./cmd/entra/m365group/m365group-user-remove.mdx) | `userName` | `userNames`
+[outlook message get](./cmd/outlook/message/message-get.mdx) | `userPrincipalName` | `userName`
+
+#### What action do I need to take?
+
+If you use any of the commands listed above, ensure that you use the new option names.
 
 ### Ensured output for `list` commands
 
