Updated based in review comments

--- a/docs/docs/cmd/pp/copilot/copilot-get.mdx
+++ b/docs/docs/cmd/pp/copilot/copilot-get.mdx
@@ -12,7 +12,7 @@ Get information about the specified copilot
 m365 pp copilot get [options]
 ```
 
-## alias
+## Alias
 
 ```sh
 m365 pp chatbot get [options]
