--- a/docs/docs/cmd/pp/copilot/copilot-remove.mdx
+++ b/docs/docs/cmd/pp/copilot/copilot-remove.mdx
@@ -10,7 +10,7 @@ Removes the specified copilot
 m365 pp copilot remove [options]
 ```
 
-## alias
+## Alias
 
 ```sh
 m365 pp chatbot remove [options]
