--- a/docs/docs/cmd/pp/website/website-weblink-list.mdx
+++ b/docs/docs/cmd/pp/website/website-weblink-list.mdx
@@ -2,14 +2,14 @@ import Global from "/docs/cmd/_global.mdx";
 import Tabs from "@theme/Tabs";
 import TabItem from "@theme/TabItem";
 
-# pp webiste weblink list
+# pp website weblink list
 
 List all weblinks for the specified Power Pages website
 
 ## Usage
 
 ```sh
-m365 pp webiste weblink list [options]
+m365 pp website weblink list [options]
 ```
 
 ## Options
@@ -35,13 +35,13 @@ m365 pp webiste weblink list [options]
 List all weblinks for the site Contoso
 
 ```sh
-m365 pp webiste weblink list --environmentName "Default-eff8592e-e14a-4ae8-8771-d96d5c549e1c" --websiteName "Contoso"
+m365 pp website weblink list --environmentName "Default-eff8592e-e14a-4ae8-8771-d96d5c549e1c" --websiteName "Contoso"
 ```
 
 List all weblinks for the site by id as admin
 
 ```sh
-m365 pp webiste weblink list --environmentName "Default-eff8592e-e14a-4ae8-8771-d96d5c549e1c" --websiteId "3bbc8102-8ee7-4dac-afbb-807cc5b6f9c2" --asAdmin
+m365 pp website weblink list --environmentName "Default-eff8592e-e14a-4ae8-8771-d96d5c549e1c" --websiteId "3bbc8102-8ee7-4dac-afbb-807cc5b6f9c2" --asAdmin
 ```
 
 ## Response
