Adds Paul Feedback

--- a/docs/docs/about/testimonials-quotes.mdx
+++ b/docs/docs/about/testimonials-quotes.mdx
@@ -42,3 +42,11 @@ Patrick Lamber, CEO at EasyLife 365
 
 Company Site: https://www.easylife365.cloud/
 
+## PAUL BULLOCK
+
+![Paul Bullock](../images/testimonials-companies-logo/paul.jpg)
+
+I’ve been watching the project for quite some time, it’s very high quality, backed by a very rich group of contributors that actively expand the product. It has a set of unique capabilities that complement other existing tools, great samples, great documentation. I’ve always seen the CLI for Microsoft 365 project as an exemplar to how to create and maintain an awesome community with a great tool! 
+
+Profile: https://linktr.ee/pkbullock
+
